force-app/main/default/objects/Image__c/Image__c.object-meta.xml
<CustomObject>
    <label>Image</label>
    <nameField>
        <label>Image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>