force-app/main/default/objects/Image__c/fields/Thumbnail_URL__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_URL__c</fullName>
    <label>Thumbnail URL</label>
    <type>Url</type>
</CustomField>